sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: '(' expected but identifier found.
      if plusPeti(i+1, i){
         ^AlgCocktailSort1:11: error: illegal start of simple expression
    }
    ^AlgCocktailSort1:13: error: '(' expected but identifier found.
      if plusPetit(j, j+1){
         ^AlgCocktailSort1:17: error: illegal start of simple expression
    }
    ^